<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currencyConvertFragment">

    <fragment
        android:id="@+id/currencyConvertFragment"
        android:name="com.example.final_examapplication.ui.fragments.CurrencyConvertFragment"
        android:label="@string/title_convert"
        tools:layout="@layout/fragment_currency_convert" />

    <fragment
        android:id="@+id/ratesListFragment"
        android:name="com.example.final_examapplication.ui.fragments.RatesListFragment"
        android:label="@string/title_rates"
        tools:layout="@layout/fragment_rates_list" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.final_examapplication.ui.fragments.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.final_examapplication.ui.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>


